[package]
name = "execd-brain"
version = "0.1.0"
authors = ["wayofthepie <wayofthepie@gmail.com>"]
edition = "2018"

[dependencies]
actix = { git = "https://github.com/actix/actix/", tag = "0.7.10" }
bytes = "0.4.11"
env_logger = "0.6.0"
futures = "0.1.25"
log = "0.4.6"
nitox = "0.1.9"
serde =  { version = "1.0.84", features = ["derive"] }
serde_json = "1.0.36"
structopt = "0.2.14"
tokio = "0.1.14"
url = "1.7.2"
uuid = { version = "0.7", features = ["serde", "v4"] }

[dev-dependencies]
im = "12.3.0"
futures-retry= "0.3.0"